improve twitter, donations, wars UX

--- a/dashboard/shared/styles.css
+++ b/dashboard/shared/styles.css
@@ -15,3 +15,15 @@ body {
     background: rgba(158,158,158,.2);
     box-shadow: 0 1px 1.5px 0 rgba(0,0,0,.12), 0 1px 1px 0 rgba(0,0,0,.24);
 }
+
+.mdl-card {
+    max-width: 100%;
+}
+
+.mdl-card__title {
+    flex-direction: column;
+}
+
+.mdl-card__title-text, .mdl-card__subtitle-text {
+    align-self: flex-start;
+}
