--- a/shared/styles/common.css
+++ b/shared/styles/common.css
@@ -1,18 +1,19 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto");
+@import url('https://fonts.googleapis.com/css?family=Oswald');
 
 body {
-    font-size: 40px;
-    font-family: "Roboto", sans-serif;
-    color: #f3ba33;
+    font-size: 36px;
+    font-family: "Oswald", sans-serif;
+    color: white;
 }
 
 .zd-label {
-    font-size: 24px;
+    font-size: 22px;
     text-transform: uppercase;
-    color: white;
+    color: #f3ba33;
 }
 
 strong, .hashtag {
-    color: white;
+    color: #f3ba33;
     font-weight: bold;
 }
