--- a/dashboard/shared/styles.css
+++ b/dashboard/shared/styles.css
@@ -36,3 +36,7 @@ body {
 .zd-bingo__button--completed {
     background-color: lightgreen !important;
 }
+
+.zd-runner--eliminated {
+    background-color: lightcoral !important;
+}
