--- a/dashboard/shared/styles.css
+++ b/dashboard/shared/styles.css
@@ -6,6 +6,10 @@ body {
     width: calc(100% - 30px);
 }
 
+.zd-checkpoint-button {
+    width: 200px;
+}
+
 .mdl-button--raised:focus:not(:active) {
     background: rgba(158,158,158,.2);
     box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
