--- a/shared/styles/player.css
+++ b/shared/styles/player.css
@@ -41,7 +41,7 @@
 .zd-player__result {
     position: absolute;
     height: 0;
-    padding: 0px 10px;
+    /*padding: 0px 10px;*/
     overflow: hidden;
     background-color: rgba(0,0,0,.5);
 }
