--- a/dashboard/shared/styles.css
+++ b/dashboard/shared/styles.css
@@ -42,6 +42,12 @@ body {
     vertical-align: top;
 }
 
+/* adding this specifically for arbitrary text within md-layout, could come in handy elsewhere */
+.md-label {
+    display: flex;
+    align-items: center;
+}
+
 .zd-boxart {
     float: left;
     margin: 0 1em 1em 0;
