implement Teams graphics

--- a/shared/styles/common.css
+++ b/shared/styles/common.css
@@ -19,6 +19,12 @@ strong, .hashtag {
     font-weight: bold;
 }
 
+.zd-highlight {
+    color: #f3ba33;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
 .zd-time--positive {
     color: lightcoral;
 }
