--- a/shared/styles/social.css
+++ b/shared/styles/social.css
@@ -73,3 +73,8 @@
     max-width: 85px;
     max-height: 60px;
 }
+
+.zd-social--small .zd-social__qrcode-wrapper {
+    max-height: 100%;
+    height: 100%;
+}
